добавил тесты покрывающие бэк, сильно изменил openapi
