# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: School News Feed API
   version: 1.0.0
-  description: API for managing school news and wall newspapers.
+  description: API for managing school information.
 servers:
   - url: https://edufeed.ru
     description: Production server
@@ -15,11 +15,11 @@ tags:
   - name: User
     description: Endpoints related to user profiles and personal actions.
   - name: Posts
-    description: Endpoints for managing posts and wall newspapers.
+    description: Endpoints for managing posts.
   - name: Admin
     description: Endpoints for administrative actions, including moderation and content management.
-  - name: Killer Features
-    description: Additional features to enhance user experience.
+  - name: General
+    description: Endpoints for admin and client
 
 paths:
   /auth/login:
@@ -69,11 +69,6 @@ paths:
       responses:
         '200':
           description: Token refreshed successfully
-          headers:
-            Set-Cookie:
-              schema:
-                type: string
-                example: refreshToken=def456; HttpOnly; Path=/; Secure; SameSite=Strict
           content:
             application/json:
               schema:
@@ -198,10 +193,29 @@ paths:
       parameters:
         - name: type
           in: query
-          required: true
           schema:
             type: string
-            enum: [news, team_search, wall_newspaper]
+            enum: [news, team_search, wallpapers]
+        - name: limit
+          in: query
+          schema:
+            type: integer
+        - name: offset
+          in: query
+          schema:
+            type: integer
+        - name: start_date
+          in: query
+          schema:
+            type: integer
+        - name: end_date
+          in: query
+          schema:
+            type: integer
+        - name: tags
+          in: query
+          schema:
+            type: array
       responses:
         '200':
           description: Posts retrieved successfully
@@ -215,7 +229,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  
+
+  /posts/create/news:
+    post:
+      tags:
+        - Posts
+      summary: Create a news as admin
+      security:
+        - BearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AdminPostCreation'
+      responses:
+        '201':
+          description: Post created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
   /posts/create/wallpapers:
     post:
       tags:
@@ -228,14 +275,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PostCreation'
+              $ref: '#/components/schemas/WallNewspapersCreation'
       responses:
         '201':
           description: Post created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PostResponse'
+                $ref: '#/components/schemas/WallNewspapersCreation'
         '400':
           description: Invalid input
           content:
@@ -287,12 +334,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden (admin does not have permission to update this post)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
     delete:
       tags:
         - Posts
@@ -314,56 +355,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-        '403':
-          description: Forbidden (user does not have permission to delete this post)
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-
-  /posts/{postId}/comments:
-    post:
-      tags:
-        - Killer Features
-      summary: Add a comment to a post
-      security:
-        - BearerAuth: []
-      parameters:
-        - name: postId
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CommentCreation'
-      responses:
-        '201':
-          description: Comment added successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CommentResponse'
-        '400':
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
 
   /posts/{postId}/like:
     post:
       tags:
-        - Killer Features
+        - Posts
       summary: Like a post
       security:
         - BearerAuth: []
@@ -374,12 +370,54 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        '204':
           description: Post liked successfully
+        '401':
+          description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LikeResponse'
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /posts/{postId}/unlike:
+    post:
+      tags:
+        - Posts
+      summary: Unlike a post
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: postId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Post unliked successfully
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /posts/{postId}/join:
+    post:
+      tags:
+        - Posts
+      summary: Join to event
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: postId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Join was successfully
         '401':
           description: Unauthorized
           content:
@@ -407,12 +445,93 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: the user does not have access
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 
-  /admin/create/post:
+  /admin/moderation/{postId}/apply:
     post:
       tags:
         - Admin
-      summary: Create a new post or wall newspaper as admin
+      summary: Apply posts from user
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: postId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Apply post
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: the user does not have access
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /admin/moderation/{postId}/reject:
+    post:
+      tags:
+        - Admin
+      summary: Reject posts from user
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: postId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                reason:
+                  type: string
+                  example: "Post have banwords"
+      responses:
+        '200':
+          description: Reject post
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  reason:
+                    type: string
+                    example: "Post have banwords"
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: the user does not have access
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /subscribe:
+    post:
+      tags:
+        - General
+      summary: Subscribe on posts or authors
       security:
         - BearerAuth: []
       requestBody:
@@ -420,81 +539,33 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AdminPostCreation'
-      responses:
-        '201':
-          description: Post created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PostResponse'
-        '400':
-          description: Invalid input
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-
-  /notifications:
-    get:
-      tags:
-        - Killer Features
-      summary: Get user notifications
-      security:
-        - BearerAuth: []
+              type: object
+              properties:
+                tags:
+                  type: array
+                  example: ["Новости"]
+                author:
+                  type: array
+                  example: ["1561", "arttyu"]
       responses:
         '200':
-          description: Notifications retrieved successfully
+          description: subscription was successful
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NotificationsResponse'
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "subscription was successful"
         '401':
           description: Unauthorized
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
-  /search:
-    get:
-      tags:
-        - Killer Features
-      summary: Search posts and wall newspapers
-      security:
-        - BearerAuth: []
-      parameters:
-        - name: query
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: type
-          in: query
-          schema:
-            type: string
-            enum: [news, team_search, wall_newspaper]
-      responses:
-        '200':
-          description: Search results retrieved successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SearchResponse'
-        '400':
-          description: Invalid query
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '401':
-          description: Unauthorized
+        '404':
+          description: Tags or author not found
           content:
             application/json:
               schema:
@@ -503,7 +574,7 @@ paths:
   /statistics:
     get:
       tags:
-        - Killer Features
+        - Admin
       summary: Get platform statistics
       security:
         - BearerAuth: []
@@ -516,6 +587,45 @@ paths:
                 $ref: '#/components/schemas/StatisticsResponse'
         '401':
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: the user does not have
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /statistics/{post_id}:
+    get:
+      tags:
+        - Admin
+      summary: Get platform statistics for post_id
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: post_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Statistics retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatisticDetailResponse'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: the user does not have
           content:
             application/json:
               schema:
@@ -613,7 +723,7 @@ components:
     ProfileResponse:
       type: object
       properties:
-        client_id:
+        user_id:
           type: string
         name:
           type: string
@@ -635,6 +745,8 @@ components:
           type: string
         surname:
           type: string
+        building:
+          type: string
         avatar_url:
           type: string
           
@@ -645,7 +757,7 @@ components:
           type: string
         type:
           type: string
-          enum: [news, team_search, wall_newspaper]
+          enum: [news, team_search, wallpapers]
         content:
           type: string
         short_content:
@@ -660,10 +772,6 @@ components:
           $ref: '#/components/schemas/Author'
         likes:
           type: integer
-        comments:
-          type: array
-          items:
-            $ref: '#/components/schemas/CommentResponse'
 
     Author:
       type: object
@@ -699,7 +807,7 @@ components:
           type: string
         type:
           type: string
-          enum: [news, team_search, wall_newspaper]
+          enum: [news, team_search, wallpapers]
         content:
           type: string
         short_content:
@@ -716,15 +824,48 @@ components:
     PostResponse:
       type: object
       properties:
-        id:
+        post_id:
+          type: string
+        title:
           type: string
         type:
           type: string
+          example: news
         content:
           type: string
-        created_at:
+        short_content:
           type: string
-          format: date-time
+        start_date:
+          type: integer
+        end_date:
+          type: integer
+        post_img:
+          type: string
+        post_img_detail:
+          type: string
+
+    WallNewspapersCreation:
+      type: object
+      required:
+        - type
+        - title
+        - content
+        - short_content
+        - post_img_detail
+      properties:
+        title:
+          type: string
+        type:
+          type: string
+          example: wallpapers
+        content:
+          type: string
+        short_content:
+          type: string
+        post_img:
+          type: string
+        post_img_detail:
+          type: string
 
     WallNewspapersResponse:
       type: object
@@ -739,12 +880,18 @@ components:
       properties:
         post_id:
           type: string
+        title:
+          type: string
+        type:
+          type: string
+          example: wallpapers
         content:
           type: string
-        created_at:
+        short_content:
           type: string
-          format: date-time
-        image_url:
+        post_img:
+          type: string
+        post_img_detail:
           type: string
         status:
           type: string
@@ -781,14 +928,18 @@ components:
     PostUpdate:
       type: object
       properties:
+        title:
+          type: string
         content:
           type: string
-        title:
-          type: string 
         short_content:
           type: string
-        end_datr:
+        start_date:
           type: integer
+        end_date:
+          type: integer
+        image_url:
+          type: string
 
     NotificationsResponse:
       type: object
@@ -809,57 +960,46 @@ components:
           type: string
           format: date-time
 
-    CommentCreation:
-      type: object
-      required:
-        - content
-      properties:
-        content:
-          type: string
-
-    CommentResponse:
-      type: object
-      properties:
-        id:
-          type: string
-        content:
-          type: string
-        created_at:
-          type: string
-          format: date-time
-
     LikeResponse:
       type: object
       properties:
         message:
           type: string
 
-    SearchResponse:
-      type: object
-      properties:
-        results:
-          type: array
-          items:
-            $ref: '#/components/schemas/Post'
-
     StatisticsResponse:
       type: object
       properties:
         total_posts:
-          type: integer
-        total_users:
-          type: integer
-        total_wall_newspapers:
           type: integer
         most_active_user:
           type: object
           properties:
             id:
               type: string
-            name:
+            login:
               type: string
             post_count:
               type: integer
+        likes:
+          type: number
+        views:
+          type: number
+        joined:
+          type: number
+        conversion:
+          type: number
+
+    StatisticDetailResponse:
+      type: object
+      properties:
+        likes:
+          type: number
+        views:
+          type: number
+        joined:
+          type: number
+        conversion:
+          type: number
 
     ErrorResponse:
       type: object
